--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
 
 
 body {
+  display:flex;
   background-image: url("reverse_bg3.png");
   background-size:cover;
   font-family: 'Press Start 2P', cursive;
@@ -12,10 +13,15 @@ body {
 }
 
 p {
+  display:flex;
   color:white;
+  line-height:20px;
+
+
 }
 
 h1 {
+  position:static;
   background-color: white;
   letter-spacing: 4px;
   text-align: center;
@@ -70,16 +76,18 @@ u1 {
   padding-top: 30px;
   padding-bottom: 30px
   border-color: white;
+  min-width:900px;
 }
 
 li {
-  line-height: 3;
+  line-height: 19px;
 
 }
 
 .Container {
   padding-top: 50px;
   margin-top: 0px;
+
   /** margin-left: 100px;
   margin-top: 0px;
   margin-right: 20px;
@@ -92,6 +100,7 @@ li {
   margin-left: 350px;
   margin-right: 350px;
   margin-top: 30px;
+  min-width:600px;
 }
 
 
@@ -107,6 +116,11 @@ li {
   margin:20px;
   text-align:center;
   width:800px;
+}
+
+#ls_text {
+  min-width:500px;
+  width:700px;
 }
 
 /* Three image containers (use 25% for four, and 50% for two, etc) */
